Deleting a copied bullet scene crashes blender. #34277

Closed
opened 2013-02-16 17:45:32 +01:00 by ronan ducluzeau · 3 comments

%%%--- Operating System, Graphics card ---
ubuntu 12.04, Nvidia quadroFX3500

- Blender version with error ---

rev54594

- Short description of error ---

When you set up a rigid body world in a scene and then, copy the scene through Link Objects, Linked Object Data or Full Copy choices;
rigid body world of the first scene is linked to the second.
So, things goes wrong. Objects are correctly animated in one of the two scene.
And if you try to delete one scene, blender crashes

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

Open attached .blend.
Click on + button to add a copy of scene.
Choose Link Objects, Linked Object Data or Full Copy.
See that rigid body world and its cache have same name has in new scene.
Click on X button to delete new scene. -> Crash

%%%

%%%--- Operating System, Graphics card --- ubuntu 12.04, Nvidia quadroFX3500 - Blender version with error --- rev54594 - Short description of error --- When you set up a rigid body world in a scene and then, copy the scene through Link Objects, Linked Object Data or Full Copy choices; rigid body world of the first scene is linked to the second. So, things goes wrong. Objects are correctly animated in one of the two scene. And if you try to delete one scene, blender crashes - Steps for others to reproduce the error (preferably based on attached .blend file) --- Open attached .blend. Click on + button to add a copy of scene. Choose Link Objects, Linked Object Data or Full Copy. See that rigid body world and its cache have same name has in new scene. Click on X button to delete new scene. -> Crash %%%

Changed status to: 'Open'

Changed status to: 'Open'

%%%Thanks for the report.
Fixed in svn r54598.
Note that copying rigid body worlds isn't supported currently, we still need to find a good way of dealing with it.%%%

%%%Thanks for the report. Fixed in svn r54598. Note that copying rigid body worlds isn't supported currently, we still need to find a good way of dealing with it.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#34277
No description provided.