rigidbody: Fix [#34277] Deleting a copied bullet scene crashes blender.

Copying scenes didn't handle rigid body worlds previously.

Since we use groups to keep track of objecs in the rigid body sim it's
tricky to do the right thing here since groups aren't duplicated.
One option would be to create new groups and add the duplicated objects
into those but that has other drawbacks.
So the rigid body world isn't copied for now.

TODO find a better way of handling this.